[package]
name = "bevy_megaui"
version = "0.1.2"
authors = ["mvlabat <mvlabat@gmail.com>"]
description = "Megaui integration for Bevy"
license = "MIT"
edition = "2018"
repository = "https://github.com/mvlabat/bevy_megaui"
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", default-features = false, features = ["render"] }
megaui = "0.2.16"

[[example]]
name = "ui"
path = "examples/ui.rs"
required-features = ["bevy/x11", "bevy/png", "bevy/bevy_wgpu"]
